# course-planner-toposort

./: .gitignore  CMakeLists.txt  LICENSE  PROJECT_PLAN_GITHUB.md  README.md
data/: branching.json  coreq_small.json  cycle.json  disconnected.json  elective_choose2.json  multisources.json  offered_terms_wintersummer.json  sample_small.json
docs/: branching_plan.md
src/: CMakeLists.txt  PlannerBuildPlan.cpp  PlannerGraph.cpp  PlannerService.cpp  PlannerService.h  PlannerTracks.cpp
src/cli/: main.cpp
src/graph/: CourseGraph.cpp  CourseGraph.h  CycleDiagnosis.cpp  CycleDiagnosis.h  TopoSort.cpp  TopoSort.h
src/io/: Loader.cpp  Loader.h  Writer.cpp  Writer.h
src/model/: Course.h  Curriculum.cpp  Curriculum.h  PlanConstraints.cpp  PlanConstraints.h
src/planner/: Clusterizer.cpp  Clusterizer.h  ElectiveResolver.cpp  ElectiveResolver.h  Explain.cpp  Explain.h  Hints.cpp  Hints.h  LongestPathDag.cpp  LongestPathDag.h  PlanTypes.h  TermAssigner.cpp  TermAssigner.h
tests/: assigner_quota_test.cpp  coreq_electives_test.cpp  earliest_term_test.cpp  graph_topo_test.cpp  loader_invalid_test.cpp  loader_test.cpp  loader_valid_test.cpp  offered_terms_hints_test.cpp  smoke_test.cpp  writer_explain_test.cpp
ui/: index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
ui/huhu/: CMakeLists.txt  RunPlanner.cpp  RunPlanner.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
ui/public/: sample.plan.json
ui/src/: App.tsx  index.css  main.tsx  styles.css
ui/src/adapters/: plannerAdapter.ts
ui/src/components/: CreditsBarChart.tsx  ExplainModal.tsx  NotesPanel.tsx  PlanTable.tsx
ui/src/hooks/: usePlan.ts
ui/src/mocks/: plan.infeasible.json  plan.sample.json
ui/src/types/: plan.ts
